--- a/src/components/identifier-generator/identifier-generator.scss
+++ b/src/components/identifier-generator/identifier-generator.scss
@@ -6,6 +6,12 @@
 
 .renewSVG {
     width: 1.5rem;
+    fill: #0f62fe;
+}
+
+.renewSVG:hover {
+    cursor: pointer;
+    fill: #525252;
 }
 
 @keyframes rotation {
