--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,6 +1,4 @@
 // OHRI FORM
 .ohriformcontainer{
-    margin-top: 100px;
-    width: 700px;
-    padding-left: 20px
+    margin: 100px 20px 20px 20px;
 }
