Save encounter - patch 2

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -1,4 +1,8 @@
 // OHRITextComponent
-.textContainer{
+.textContainer, .numberInputWrapper {
     padding-bottom: 20px;
+}
+
+.numberInputWrapper :global(.bx--number) {
+    width: 100%;
 }
