--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,5 +1,5 @@
 .ohriformcontainer {
-    margin: 3rem 0px 20px 0px;
+    margin: 0rem 0rem .5rem 0rem;
     height: 100%;
     font-family: "IBM Plex Sans";
 }
