--- a/src/root.scss
+++ b/src/root.scss
@@ -1,7 +1,7 @@
-@import "~carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/type/styles";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/spacing";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/layout";
-@import "carbon-components/scss/globals/scss/typography.scss";
+@import '~carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/type/styles';
+@import '~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/spacing';
+@import '~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/layout';
+@import 'carbon-components/scss/globals/scss/typography.scss';
 
 $ui-01: #f4f4f4;
 $ui-02: #ffffff;
@@ -19,51 +19,51 @@ $interactive-01: #0f62fe;
 $brand-teal-01: #007d79;
 
 .productiveHeading01 {
-  @include carbon--type-style("productive-heading-01");
+  @include carbon--type-style('productive-heading-01');
 }
 
 .productiveHeading02 {
-  @include carbon--type-style("productive-heading-02");
+  @include carbon--type-style('productive-heading-02');
 }
 
 .productiveHeading03 {
-  @include carbon--type-style("productive-heading-03");
+  @include carbon--type-style('productive-heading-03');
 }
 
 .productiveHeading04 {
-  @include carbon--type-style("productive-heading-04");
+  @include carbon--type-style('productive-heading-04');
 }
 
 .productiveHeading05 {
-  @include carbon--type-style("productive-heading-05");
+  @include carbon--type-style('productive-heading-05');
 }
 
 .productiveHeading06 {
-  @include carbon--type-style("productive-heading-06");
+  @include carbon--type-style('productive-heading-06');
 }
 
 .bodyShort01 {
-  @include carbon--type-style("body-short-01");
+  @include carbon--type-style('body-short-01');
 }
 
 .helperText01 {
-  @include carbon--type-style("helper-text-01");
+  @include carbon--type-style('helper-text-01');
 }
 
 .bodyShort02 {
-  @include carbon--type-style("body-short-02");
+  @include carbon--type-style('body-short-02');
 }
 
 .bodyLong01 {
-  @include carbon--type-style("body-long-01");
+  @include carbon--type-style('body-long-01');
 }
 
 .bodyLong02 {
-  @include carbon--type-style("body-long-02");
+  @include carbon--type-style('body-long-02');
 }
 
 .label01 {
-  @include carbon--type-style("label-01");
+  @include carbon--type-style('label-01');
 }
 
 .text01 {
