sidebar and content styling

--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,14 +1,16 @@
 .ohriformcontainer {
     margin: 0rem 0rem .5rem 0rem;
     height: 100%;
+  background-color:#ffffff !important;
+
 }
 
 .formStyle{
-  background-color:#ffffff;
+  background-color:#ffffff !important;
 }
 
 .contentWrapper, .submit {
-    margin: 0px 20px 0px 20px;
+    margin: 100px 20px 0px 20px;
 }
 
 .title {
@@ -16,4 +18,16 @@
   font-size: 1.75rem;
   line-height: 1.29;
   color: var(--color-gray-100);
+}
+
+.ohriSidebar{
+  position: fixed;
+  margin-top:5.5rem;
+}
+
+.ohriFormContent {
+  position: absolute;
+  overflow: auto;
+  z-index: 7999;
+  overflow: hidden;
 }
