--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -1,5 +1,18 @@
 @import "../../../root.scss";
 
 .space05 {
-    margin: $spacing-05 0 $spacing-05 0;
+    margin: $spacing-05 0 $spacing-05 0; 
+}
+.link {
+  margin: 0.375rem 0 0.375rem 0.5rem;
+  font-size: 1rem;
+
+  line-height: 1.43;
+  letter-spacing: 0.16px;
+  color: #161616;
+  cursor: pointer;
+}
+
+.link:hover {
+    outline: none;
 }
