add white background to aside, remove content-switcher divider

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -43,9 +43,8 @@ border: solid 1px #0f62fe !important;
     border: none !important;
 }
 
-.selectedOption button:after {
-    height: auto !important;
-    background-color: #a6c8ff !important;
+.selectedOption button:before {
+    display:none !important;
 }
 
 .switchOverridesNone {
