select sidebar, scroll to position or rough

--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -23,10 +23,14 @@
 }
 
 .ohriFormContent {
-  position: absolute;
-  overflow: auto;
-  z-index: 7999;
-  overflow: hidden;
+  // position: absolute;
+  // overflow: auto;
+  // z-index: 7999;
+  // overflow: hidden;
+}
+
+* {
+  scroll-margin-top: 28.125rem;
 }
 
 .sideBarHorizontalLine {
