clean up position issue

--- a/src/root.scss
+++ b/src/root.scss
@@ -79,6 +79,6 @@ $ohri-input-width: 22.313rem;
    background-color: $ui-02 !important;
  }
 
-header {
-   position: fixed !important;
-}
+// header {
+//    position: fixed !important;
+// }
