--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -2,8 +2,8 @@
     width: 100%;
     position: fixed;
     top: 138px;
-    height: calc(100vh - 50px);
-    overflow: auto;
+    height: 100%;
+    overflow-y: scroll;
     flex: 1;
 }
 
