add height to last element

--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -2,10 +2,12 @@
     width: 100%;
     position: fixed;
     top: 138px;
-    height: 100%;
+    height: 100vh;
     overflow-y: scroll;
     flex: 1;
 }
+
+.pageContent:last-child {height: 100vh;} 
 
 .ohriformcontent{
   width: 100%;
