--- a/src/hts/home/summary-tile/hts-summary-tile.scss
+++ b/src/hts/home/summary-tile/hts-summary-tile.scss
@@ -1,13 +1,16 @@
+@import "../../../root.scss";
+
 .tile {
     width: 321px;
+    max-width: 500px;
     height: 126px;
-    margin: 16px 15px 16px 15.6px;
-    padding: 1px 0 16px 16px;
+    margin: 0px 15px 16px 15.6px;
+    // padding: 1px 0 16px 16px;\
     border: solid 1px #e0e0e0;
 }
 
 .tileContent {
-    // padding: 16px 18px 16px 31.6px;
+    padding: 16px 15px 16px 15.6px;
     display: flex;
     flex-direction: column;
 }
@@ -19,9 +22,11 @@
 
 .tileTitle {
     height: 18px;
-    margin: 15px 118px 24px 0;
+    margin: 15px 65px 24px 0;
     font-size: 14px;
     font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
     line-height: 1.29;
     letter-spacing: 0.16px;
     color: #525252;
