--- a/src/ohri-home/ohri-home.scss
+++ b/src/ohri-home/ohri-home.scss
@@ -1,5 +1,12 @@
 @import "../root.scss";
 
+.mainWrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: #ffffff;
+}
+
 .home-content-top{
 margin: 16.1px 15.4px ;
 }
