base implementation for tablet tile

--- a/src/hts/home/welcome-section/hts-welcome-section.scss
+++ b/src/hts/home/welcome-section/hts-welcome-section.scss
@@ -1,6 +1,6 @@
 // welcome section
 .container{
-    top: 30px;
+    margin-top: 16px;
 }
 
 .welcome {
@@ -17,11 +17,18 @@
 
 .welcomeDetails{
     height: 36px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .userwelcome {
     font-size: 28px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
     line-height: 1.29;
+    letter-spacing: normal;
     color: #161616;
 }
 
