--- a/src/hts/home/patient-tabs/ohri-patient-tabs.scss
+++ b/src/hts/home/patient-tabs/ohri-patient-tabs.scss
@@ -1,8 +1,10 @@
 @import "../../../root.scss";
 
 .container{
-    margin: 16px;
+    margin-top: 16px;
+    margin-left: inherit;
     width: 100%;
+    overflow-y: hidden;
 }
 
 .container div button{
@@ -10,5 +12,7 @@
 }
 
 .container div button.bx--tabs--scrollable.bx--tabs--scrollable--container.bx--tabs--scrollable__nav-link{
-    box-shadow: inset 0 2px 0 0 $brand-teal-01;
+    box-shadow: inset 0 2px 0 0 $brand-teal-01 !important;
+    background-color: red;
 }
+
