--- a/src/hts/home/welcome-section/hts-welcome-section.scss
+++ b/src/hts/home/welcome-section/hts-welcome-section.scss
@@ -1,7 +1,4 @@
 // welcome section
-.container{
-    margin-top: 16px;
-}
 
 .welcome {
   font-size: 16px;
@@ -21,20 +18,21 @@
     justify-content: space-between;
 }
 
-.userwelcome {
-    font-size: 38px;
-    font-weight: 800;
-    font-stretch: normal;
-    font-style:normal;
-    line-height: 1.29;
-    letter-spacing: normal;
-    color: #161616;
+.userWelcome {
+  font-size: 28px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.29;
+  letter-spacing: normal;
+  color: #161616;
+  margin-bottom: 16px;
 }
 
 .currentDate {
-    display: flex;
-    flex-direction: row;
-    padding-left: 30%;
+  display: flex;
+  flex-direction: row;
+  padding-left: 30%;
   font-size: 20px;
   font-weight: normal;
   font-stretch: normal;
@@ -49,5 +47,9 @@
     width: 25px;
     height: 25px;
     padding-right: 1px;
+}
+
+.bx--tab-content{
+  background-color: ivory !important;
 }
 
