--- a/src/components/patient-banner/patient-banner.scss
+++ b/src/components/patient-banner/patient-banner.scss
@@ -4,7 +4,8 @@
     display: flex;
     width: 100%;
     height: 5.5rem;
-    position:fixed;
+    top: 48px;
+    position:sticky;
     background: #ffffff;
     border-bottom: 0.063rem solid #c6c6c6;
 }
