--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,35 +1,73 @@
-.ohriformcontainer {
-    // width: 100%;
-    position: fixed;
-    top: 138px;
-    height: 100vh;
-    overflow-y: scroll;
-    flex: 1;
-}
+// .ohriformcontainer {
+//     // width: 100%;
+//     position: fixed;
+//     top: 138px;
+//     height: 100vh;
+//     overflow-y: scroll;
+//     flex: 1;
+// }
 
-.pageContent:last-child {height: 100vh;} 
+// .pageContent:last-child {height: 100vh;} 
 
-.ohriformcontent{
-  // width: 100%;
-}
+// .ohriformcontent{
+//   // width: 100%;
+// }
 
-// complete and validated.
+// // complete and validated.
 
-.title {
-  margin: 0 31.5rem 1.5rem 0;
-  font-size: 1.75rem;
-  line-height: 1.29;
-  width: 100%;
-  color: #161616;
-}
+// .title {
+//   margin: 0 31.5rem 1.5rem 0;
+//   font-size: 1.75rem;
+//   line-height: 1.29;
+//   width: 100%;
+//   color: #161616;
+// }
 
-.ohriSidebar{
-  position: fixed;
+// .ohriSidebar{
+//   position: fixed;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// .sideBarHorizontalLine {
+//   background-color: rgba(107, 104, 104, 0.5);
+//   margin: 1.375rem 1.625rem 1.5rem 0.438rem;
+// }
+
+
+.wrapper {
+  height: 100vh;
+  display: -webkit-flex;
   display: flex;
+  -webkit-flex-direction: column;
   flex-direction: column;
+  outline: 1px solid red;
+  top:48px;
 }
 
-.sideBarHorizontalLine {
-  background-color: rgba(107, 104, 104, 0.5);
-  margin: 1.375rem 1.625rem 1.5rem 0.438rem;
+.wrapper > .header {
+  -webkit-flex: 0 0 auto;
+  flex: 0 0 auto;
 }
+
+.wrapper > .header + div {
+  -webkit-flex: 1 1 auto;
+  flex: 1 1 auto;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.wrapper > .header + div > div:first-of-type {
+  -webkit-flex: 3 0 0;
+  flex: 3 0 0;
+
+}
+
+.wrapper > .header + div > div:last-of-type {
+  -webkit-flex: 7 0 0;
+  flex: 7 0 0;
+  background-color: azure;
+}
+
