redesign form layout-2

--- a/src/forms/components/section/_section.scss
+++ b/src/forms/components/section/_section.scss
@@ -4,7 +4,7 @@
 }
 
 .sectionTitle {
-  max-Width:12rem;
+  width: 100%;
   font-size: 1rem;
   font-weight: 600;
   line-height: 1.38;
@@ -15,4 +15,5 @@
 
 .container {
   margin-top: 1.438rem;
+  width: 100%;
 }
