--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -6,6 +6,13 @@
   margin: 1.813rem 0 1.688rem;
 }
 
+.sidebar{
+width: 11rem;
+margin-left: 20px;
+margin-right: 20px;
+position: fixed;
+}
+
 .link {
   margin: 0.375rem 0 0.375rem 0.5rem;
   font-size: 1rem;
