--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -29,10 +29,10 @@
 //   flex-direction: column;
 // }
 
-// .sideBarHorizontalLine {
-//   background-color: rgba(107, 104, 104, 0.5);
-//   margin: 1.375rem 1.625rem 1.5rem 0.438rem;
-// }
+.sideBarHorizontalLine {
+  background-color: rgba(107, 104, 104, 0.5);
+  margin: 1.375rem 1.625rem 1.5rem 0.438rem;
+}
 
 
 .wrapper {
@@ -41,8 +41,11 @@
   display: flex;
   -webkit-flex-direction: column;
   flex-direction: column;
-  outline: 1px solid red;
-  top:48px;
+  top:24px;
+  overflow: auto;
+  position: fixed;
+  top: 50px;
+  // width: 100%;
 }
 
 .wrapper > .header {
@@ -62,12 +65,13 @@
 .wrapper > .header + div > div:first-of-type {
   -webkit-flex: 3 0 0;
   flex: 3 0 0;
-
 }
 
 .wrapper > .header + div > div:last-of-type {
   -webkit-flex: 7 0 0;
   flex: 7 0 0;
-  background-color: azure;
+  margin-bottom: 20rem;
+  overflow-y: hidden;
+  width: 100%;
 }
 
