--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -11,7 +11,7 @@
   line-height: 1.4;
   color: var(--color-gray-100);
   margin-top: 1.5rem;
-  max-Width: 25.55rem;
+  width: 100%;
 }
 
 .required{
@@ -21,6 +21,7 @@
   letter-spacing: 0.16px;
   color: var(--color-gray-70);
   margin-bottom: 1.5rem;
+  width: 100%;
 }
 
 .formSection {
