switch to modal

--- a/src/root.scss
+++ b/src/root.scss
@@ -75,6 +75,8 @@ $ohri-input-width: 22.313rem;
   color: $text-02;
 }
 
+// coming for openmrs
 aside {
    background-color: $ui-02 !important;
+   overflow: hidden !important;
 }
