--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -34,18 +34,33 @@
   margin: 1.375rem 1.625rem 1.5rem 0.438rem;
 }
 
+.header{
+  background: #333;
+  padding: 15px;
+  text-align:center;
+  font-size: 18px;
+  font-family: sans-serif;
+  color: #fff;
+}
 
 .wrapper {
-  height: 100vh;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: column;
-  flex-direction: column;
-  top:24px;
-  overflow: auto;
-  position: fixed;
-  top: 50px;
+  // height: 100vh;
+  // display: -webkit-flex;
+  // display: flex;
+  // -webkit-flex-direction: column;
+  // flex-direction: column;
+  // top:24px;
+  // overflow: auto;
+  // position: fixed;
+  // top: 50px;
   // width: 100%;
+
+  // height: 100%;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: column;
+    flex-direction: column;
+    overflow:hidden;
 }
 
 .wrapper > .header {
@@ -60,6 +75,7 @@
   display: flex;
   -webkit-flex-direction: row;
   flex-direction: row;
+
 }
 
 .wrapper > .header + div > div:first-of-type {
@@ -71,7 +87,7 @@
   -webkit-flex: 7 0 0;
   flex: 7 0 0;
   margin-bottom: 20rem;
-  overflow-y: hidden;
-  width: 100%;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
