--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,105 +1,3 @@
-// .ohriformcontainer {
-//     // width: 100%;
-//     position: fixed;
-//     top: 138px;
-//     height: 100vh;
-//     overflow-y: scroll;
-//     flex: 1;
-// }
-
-// .pageContent:last-child {height: 100vh;} 
-
-// .ohriformcontent{
-//   // width: 100%;
-// }
-
-// // complete and validated.
-
-// .title {
-//   margin: 0 31.5rem 1.5rem 0;
-//   font-size: 1.75rem;
-//   line-height: 1.29;
-//   width: 100%;
-//   color: #161616;
-// }
-
-// .ohriSidebar{
-//   position: fixed;
-//   display: flex;
-//   flex-direction: column;
-// }
-
-.sideBarHorizontalLine {
-  background-color: rgba(107, 104, 104, 0.5);
-  margin: 1.375rem 1.625rem 1.5rem 0.438rem;
-}
-
-.header{
-  background: #333;
-  padding: 15px;
-  text-align:center;
-  font-size: 18px;
-  font-family: sans-serif;
-  color: #fff;
-}
-
-.wrapper {
-  // height: 100vh;
-  // display: -webkit-flex;
-  // display: flex;
-  // -webkit-flex-direction: column;
-  // flex-direction: column;
-  // top:24px;
-  // overflow: auto;
-  // position: fixed;
-  // top: 50px;
-  // width: 100%;
-
-  // height: 100%;
-    // display: -webkit-flex;
-    // display: flex;
-    // -webkit-flex-direction: column;
-    // flex-direction: column;
-
-    display: flex;
-   flex-direction: column;
-   height: 100vh;
-    overflow:hidden;
-   width: auto;
-   background-color: rgb(240, 240, 240);
-}
-
-.wrapper > .header {
-  -webkit-flex: 0 0 auto;
-  flex: 0 0 auto;
-}
-
-// .wrapper > .header + div {
-//   -webkit-flex: 1 1 auto;
-//   flex: 1 1 auto;
-//   display: -webkit-flex;
-//   display: flex;
-//   -webkit-flex-direction: row;
-//   flex-direction: row;
-
-// }
-
-// .wrapper > .header + div > div:first-of-type {
-//   -webkit-flex: 3 0 0;
-//   flex: 3 0 0;
-// }
-
-// .wrapper > .header + div > div:last-of-type {
-//   -webkit-flex: 7 0 0;
-//   flex: 7 0 0;
-//   margin-bottom: 20rem;
-//   height: 100vh;
-//   overflow-y: scroll;
-// }
-
-
-
-
 /* a container with flex-direction column */
 .mainContainer {
   height: 75vh; /* or position:absolute; height:100%; */
@@ -113,6 +11,7 @@
   padding: 20px;
   background-color: #0B5AB0;
   color: white;
+  // position: fixed;
 }
 
 /* this is the flex container that will take the rest of the height */
@@ -124,20 +23,24 @@
 
 /* the container for our overflowed content */
 .overflowContainer {
-  flex: 1;
+  flex: 1 1 auto;
   overflow: auto;
+  overscroll-behavior: contain;
+}
+
+/* the fixed sidebar content */
+.sidebar{
+  height: 400px;
+  width: 12rem;
+  position: fixed;
 }
 
 /* the overflow content itself */
 .overflowContent {
-  // height: 2000px;
   color: black;
   background-color: #ddd;
   padding: 20px;
-}
-
-code {
-  font-weight: bold;
-  color: darkred;
-  margin: 0 5px;
+  height: auto;
+  margin-left: 13rem;
+  
 }
