--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -1,7 +1,7 @@
 @import "../../../root.scss";
 .sidebar{
 width: 11rem;
-margin-left: 20px;
+// margin-left: 20px;
 margin-right: 20px;
 position: fixed;
 }
