--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -31,7 +31,7 @@
   height: auto;
   width: 12rem;
   position: fixed;
-  margin-top: 2px;
+  margin-left: 10px;
 }
 
 /* the overflow content itself */
@@ -40,7 +40,7 @@
   margin-left: 13rem;
   padding-bottom: 40rem;
   position: fixed;
-  top: 132px;
+  top: 140px;
   left: 0;
   bottom: 0;
   overflow-y: scroll;
