--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -31,6 +31,7 @@
   height: auto;
   width: 12rem;
   position: fixed;
+  margin-top: 5px;
   margin-left: 10px;
 }
 
@@ -44,5 +45,39 @@
   left: 0;
   bottom: 0;
   overflow-y: scroll;
+  max-width: 100%;
+}
+
+/* iPads (portrait and landscape) ----------- */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+  /* Styles */
+  /* the overflow content itself */
+.overflowContent {
   max-width: 70%;
 }
+  }
+  
+  /* iPads (landscape) ----------- */
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+  /* Styles */
+  .overflowContent {
+    max-width: 70%;
+  }
+  }
+  
+  /* iPads (portrait) ----------- */
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
+  /* Styles */
+  .overflowContent {
+    max-width: 70%;
+  }
+  }
+  /**********
+  iPad 3
+  **********/
+  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
+  /* Styles */
+  .overflowContent {
+    max-width: 70%;
+  }
+  }
