--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -48,36 +48,47 @@
   max-width: 100%;
 }
 
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-  /* Styles */
-  /* the overflow content itself */
-.overflowContent {
-  max-width: 70%;
+
+@media (max-width: 1024px) {
+  .overflowContent {
+    height: auto;
+    margin-left: 13rem;
+    padding-bottom: 40rem;
+    position: fixed;
+    top: 140px;
+    left: 0;
+    bottom: 0;
+    overflow-y: scroll;
+    max-width: 60%;
+  }
+
+  .mainContainer {
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    overscroll-behavior: contain;
+    padding-right: 20px;
+  }
 }
-  }
-  
-  /* iPads (landscape) ----------- */
-  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-  /* Styles */
+
+
+@media (max-width: 1680px) {
   .overflowContent {
+    height: auto;
+    margin-left: 13rem;
+    padding-bottom: 40rem;
+    position: fixed;
+    top: 140px;
+    left: 0;
+    bottom: 0;
+    overflow-y: scroll;
     max-width: 70%;
   }
+
+  .mainContainer {
+    height: 75vh;
+    display: flex;
+    flex-direction: column;
+    overscroll-behavior: contain;
   }
-  
-  /* iPads (portrait) ----------- */
-  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-  /* Styles */
-  .overflowContent {
-    max-width: 70%;
-  }
-  }
-  /**********
-  iPad 3
-  **********/
-  @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-  /* Styles */
-  .overflowContent {
-    max-width: 70%;
-  }
-  }
+}
