--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -12,7 +12,6 @@
   right: 0;
   left: 0;
   padding: 16px;
-  height: 150px;
   object-fit: contain;
 }
 
@@ -31,7 +30,7 @@
 
 .demographics {
   @include carbon--type-style("body-short-01");
-  color: $text-02;
+  color: #525252;
   margin-top: 0.375rem;
 }
 
