--- a/src/hts/home/summary-tiles/summary-tile.scss
+++ b/src/hts/home/summary-tiles/summary-tile.scss
@@ -1,19 +1,17 @@
-@media screen and (max-width: 768px) {
-    .tileView {
-      visibility: visible;
-    }
-    .desktopView {
-        visibility: hidden;
-        display: none;
-      }
+.desktopView{
+  visibility: visible;
+}
+.tileView {
+  visibility: hidden;
+  display: none;
+}
+
+@media (max-width: 1024px) {
+  .desktopView{
+    visibility: hidden;
+    display: none;
   }
-  
-  @media screen and (min-width: 992px) {
-    .desktopView {
-      visibility: visible;
-    }
-    .tileView {
-        visibility: hidden;
-        display: none;
-      }
+  .tileView {
+    visibility: visible;
   }
+}
