Add validation constraints

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -104,7 +104,11 @@
     font-size: 0.875rem !important;
 }
 
-.unspecified > div label{
+.unspecified > div label {
     font-size: 12px;
     color: $color-gray-70;
+}
+
+.errorLegend legend, .errorLabel label {
+    color: #da1e28
 }
