Add validation constraints

--- a/src/forms/components/inputs/_input.scss
+++ b/src/forms/components/inputs/_input.scss
@@ -95,3 +95,7 @@ background-color: #edf5ff;
 .textInputOverrides label {
     font-size: 0.875rem !important;
 }
+
+.errorLegend legend, .errorLabel label {
+    color: #da1e28
+}
