--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -11,23 +11,27 @@
   top: 0;
   right: 0;
   left: 0;
-  // padding: 16px;
   object-fit: contain;
-  width: 1440px;
+  max-width: 1440px;
   height: inherit;
+}
+
+@media (max-width: 1024px) {
+  .container{
+    margin: 40px !important;
+  }
 }
 
 .listBanner {
   display: flex;
-  // background-color: red;
   width: auto;
-  padding: 0 16px 16px 16px;
   border-bottom: 1px solid  #e0e0e0;
 }
 
 .bannerTitle {
   @include carbon--type-style("body-short-02");
   margin-right: 0.25rem;
+  padding-left: 16px;
 }
 
 .listInfo {
@@ -37,14 +41,15 @@
 .demographics {
   @include carbon--type-style("body-short-01");
   color: #525252;
-  margin-top: 0.375rem;
+  padding-left: 16px;
+  margin-bottom: 12px;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   margin-top: 0.875rem;
 }
 
@@ -52,7 +57,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   margin-top: 0.875rem;
   border-top: 0.063rem solid $ui-03;
   border-bottom: 0.063rem solid $ui-03;
