--- a/src/root.scss
+++ b/src/root.scss
@@ -2,6 +2,7 @@
 @import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/spacing";
 @import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/layout";
 @import "carbon-components/scss/globals/scss/typography.scss";
+@import "~@openmrs/esm-styleguide/src/vars";
 
 $ui-01: #f4f4f4;
 $ui-02: #ffffff;
@@ -18,6 +19,7 @@ $danger: #da1e28;
 $interactive-01: #0f62fe;
 $brand-teal-01: #007d79;
 $ohri-input-width: 22.313rem;
+$ohri-home-background: #ededed;
 
 .productiveHeading01 {
   @include carbon--type-style("productive-heading-01");
