--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -4,7 +4,7 @@
   border-top: 0.063rem solid $ui-03;
   border-bottom: 0.063rem solid $ui-03;
   background-color: $ui-01;
-  margin: 40px auto;
+  margin: 40px 0 0;
   color: $ui-05;
   z-index: 1;
   position: fixed;
@@ -37,8 +37,7 @@
 .demographics {
   @include carbon--type-style("body-short-01");
   color: $color-gray-70;
-  padding-left: 16px;
-  margin-bottom: 12px;
+  margin-top: 0.375rem;
 }
 
 .row {
