--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -4,7 +4,7 @@
   border-top: 0.063rem solid $ui-03;
   border-bottom: 0.063rem solid $ui-03;
   background-color: $ui-01;
-  margin: 40px 0 0;
+  margin: 40px auto;
   color: $ui-05;
   z-index: 1;
   position: fixed;
@@ -38,6 +38,8 @@
   @include carbon--type-style("body-short-01");
   color: $color-gray-70;
   margin-top: 0.375rem;
+  padding-left: 16px;
+  padding-bottom: 16px;
 }
 
 .row {
