Squashed commit of the following:
commit 8ea9ca5bfb900de6110d3a27934fd310a032eeb0
Merge: a7c59e6 dc7616e
Author: Samuel Male <samuelsmalek@gmail.com>
Date:   Thu Aug 19 17:53:59 2021 +0300

    Merge pull request #190 from samuelmale/working

    Scrap off add button in launcher

commit dc7616eeccd7ba8d6b26f5af9fc41d7f93f8980d
Author: Samuel Male <samuelsmalek@gmail.com>
Date:   Thu Aug 19 17:52:56 2021 +0300

    Scrapoff add button in launcher

commit a7c59e6f725986af3e78c866ed7dd8925f844e00
Merge: b4ccd11 b256f5b
Author: Lars Albino Lemos <lars.lemos@ucsf.edu>
Date:   Thu Aug 19 14:46:15 2021 +0200

    Merge pull request #188 from larslemos/working

    Fix progam dropdown, allow extended form, fix lint, fix build

commit b256f5b5cba5c62baa598b7420f231115b1408f4
Author: Lars Albino Lemos <lars.lemos@ucsf.edu>
Date:   Thu Aug 19 14:22:00 2021 +0200

    Fix progam dropdown, allow extended form, fix lint, fix build

commit b4ccd1119778183cad67b21af76a4712d0a883af
Merge: 5c4fba8 90db4fd
Author: Lars Albino Lemos <lars.lemos@ucsf.edu>
Date:   Thu Aug 19 09:04:39 2021 +0200

    Merge pull request #187 from larslemos/feature/ohri-103-form-engine-version-2-v3

    OHRI-173 Expanded Form JSON to support multiple behavioural scenarios defined and implemented

commit 90db4fd190b4556e8ded9a3fa2ec4b2b35eb89cb
Author: Lars Albino Lemos <lars.lemos@ucsf.edu>
Date:   Thu Aug 19 08:57:15 2021 +0200

    Fix progam dropdown, allow extended form, fix lint

commit 2a542ae35ae04404999cfc03f3a9a85fe7f416ec
Author: Lars Albino Lemos <lars.lemos@ucsf.edu>
Date:   Thu Aug 19 08:46:15 2021 +0200

    Fix progam dropdown, allow extended form

commit 5c4fba8704bb2420bfa49ee1a53425d4d06e86fc
Merge: 0e8dafd d889889
Author: Samuel Male <samuelsmalek@gmail.com>
Date:   Wed Aug 18 23:15:33 2021 +0300

    Merge pull request #185 from samuelmale/working

    Introduce form launcher

commit d889889e426018e460937757dee9a7238da9be81
Author: Samuel Male <samuelsmalek@gmail.com>
Date:   Wed Aug 18 

--- a/src/components/patient-banner/patient-banner.scss
+++ b/src/components/patient-banner/patient-banner.scss
@@ -8,6 +8,7 @@
     position:sticky;
     background: #ffffff;
     z-index: -1;
+    border-bottom: 1px solid #c6c6c6;
 }
 
 .row {
@@ -16,10 +17,6 @@
     align-items: baseline;
 }
 
-.vl{
-    border-left: 0.163rem solid #c6c6c6;
-    height: 100%;
-}
 
 /*
 * Demographics
@@ -42,44 +39,4 @@
     font-size: 1.2rem;
     color: #525252;
     font-family: "IBM Plex Sans";
-}
-
-/*
-* Weight
-*/
-.weight {
-    margin-top: 10px;
-    margin-left: 1rem;
-    margin-top: 10px;
-    margin-right: 1rem;
-}
-
-.weightLabel, .allergiesLabel {
-    
-    margin: 0 0 0.5rem 0;
-    font-family: "IBM Plex Sans";
-    font-size: 1.2rem;
-    line-height: 1.5;
-    color: #525252;
-}
-
-.weightValue, .allergiesValue {
-    font-family: "IBM Plex Sans";
-    font-size: 1.3rem;
-    color: #161616;
-}
-
-.weightUnit {
-    margin-left: 0.5rem;
-    font-size: 1.2rem;
-    font-family: "IBM Plex Sans";
-    color: #525252;
-}
-
-/*
-* Allergies
-*/
-.allergies {
-    margin-top: 10px;
-    width: 30%;
 }
