--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -22,7 +22,7 @@ position: fixed;
 // Sidebar-Section
 .sidebarSection{
   border-left: 0.5rem solid #9ef0f0;
-  height: 1.75rem;
+  height: auto;
   margin: 0.122rem 0 0.122rem;
   padding: 0.382rem 0.375rem 0.118rem 1rem;
   background-color: #ffffff;
@@ -31,7 +31,7 @@ position: fixed;
 
 .sidebarSectionActive {
   border-left: 0.5rem solid #009d9a;
-  height: 1.75rem;
+  height: auto;
   font-weight: 600;
   margin: 0.122rem 0 0.122rem;
   padding: 0.382rem 0.375rem 0.118rem 1rem;
@@ -41,7 +41,7 @@ position: fixed;
 
 .sidebarSectionDone {
   border-left: 0.5rem solid #42be65;
-  height: 1.75rem;
+  height: auto;
   margin: 0.122rem 0 0.122rem;
   padding: 0.382rem 0.375rem 0.118rem 1rem;
   background-color: #defbe6;
