--- a/src/components/empty-state/empty-state.scss
+++ b/src/components/empty-state/empty-state.scss
@@ -27,6 +27,13 @@
   border-bottom: 0.375rem solid $brand-teal-01;
 }
 
-.tile {
+.contentWrapper {
   text-align: center;
+  margin-top: '0.5rem';
+  margin-bottom: '2rem';
+}
+
+.headerWrapper {
+  display: flex;
+  justify-content: space-between;
 }
