--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -38,6 +38,7 @@
   position: relative;
   overflow: scroll;
   overscroll-behavior: contain;
-  padding-bottom: 30rem;
+  padding-bottom: 40rem;
+  padding-left: 5px;
 }
 
