--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -54,7 +54,36 @@
   overflow: scroll;
   /* Necessary to become containing block for position: fixed child */
   transform: translate3d(0, 0, 0);
-  flex-basis: 20%;
+  flex-basis: 23%;
+  }
+
+  .overflowContent {
+    height: inherit;
+    margin: 0px;
+    padding: 0px;
+    flex-basis: 75%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    position: relative;
+    overflow: scroll;
+    overscroll-behavior: contain;
+    padding-bottom: 60rem;
+    padding-left: 5px;
+  }
+}
+
+@media (max-width: 768px) {
+  .sidebar {
+  margin: 0px;
+  padding: 0px;
+  padding-left: 16px;
+  flex-grow: 0.6;
+  flex-shrink: 1;
+  position: relative;
+  overflow: scroll;
+  /* Necessary to become containing block for position: fixed child */
+  transform: translate3d(0, 0, 0);
+  flex-basis: 28%;
   }
 
   .overflowContent {
