--- a/src/forms/components/page/_page.scss
+++ b/src/forms/components/page/_page.scss
@@ -1,6 +1,9 @@
 .divider {
   background-color: rgba(107, 104, 104, 0.5);
-  margin: 1.375rem 1.625rem 1.5rem 0.438rem;
+  // margin: 1rem 0 1rem 0;
+  margin: 0;
+  margin-top: 25px;
+  margin-bottom: 25px;
   width: 80%;
 }
 
@@ -18,12 +21,12 @@
   line-height: 1.29;
   letter-spacing: 0.16px;
   color: var(--color-gray-70);
-  margin-bottom: 0.5rem;
   width: 100%;
 }
 
 .formSection {
-  width: 100%;
+  // flex-shrink: 1;
+  flex: 1 1 65%;
 }
 
 .formSection > div > fieldset {
