--- a/src/forms/_form.scss
+++ b/src/forms/_form.scss
@@ -1,7 +1,7 @@
 /* a container with flex-direction column */
 .mainContainer {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   display: -webkit-box;
   display: -moz-box;
@@ -10,8 +10,6 @@
   margin: 0px;
   overscroll-behavior: contain;
   position: fixed;
-  flex-grow: 1;
-  flex-shrink: 1;
 }
 
 /* the fixed sidebar content */
@@ -19,11 +17,9 @@
   margin: 0px;
   padding: 0px;
   padding-left: 16px;
-  flex-grow: 0.6;
-  flex-shrink: 1;
+  width: 13rem;
   position: relative;
   overflow: scroll;
-  flex-basis: 10%;
   /* Necessary to become containing block for position: fixed child */
   transform: translate3d(0, 0, 0);
 }
