--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -92,3 +92,12 @@
   padding: 32px 32px 0px 32px;
   // background-color: $ui-03;
 }
+
+// extension
+.Extentioncontainer{
+  height: 100%;
+}
+
+.Extentioncontainer > div{
+  height: 100%;
+}
