--- a/src/components/ohri-form-launcher/laucher-with-intent.scss
+++ b/src/components/ohri-form-launcher/laucher-with-intent.scss
@@ -3,4 +3,9 @@
 .launchButtonWrapper {
     width: fit-content;
     margin: 0 $spacing-03;
-  }  
+}  
+
+.toggleButtons {
+    width: fit-content;
+    margin: 0 $spacing-03;
+}
