OHRI-222 Covid section sidenav, patient chart, submenu, fix file dependency

--- a/src/hts/encounters-list/care-and-treatment-list.scss
+++ b/src/hts/encounters-list/care-and-treatment-list.scss
@@ -1,15 +1,15 @@
-@import "../../root.scss";
+// @import "../../root.scss";
 
- .widgetContainer {
-   background-color: $ui-background;
- }
+//  .widgetContainer {
+//    background-color: $ui-background;
+//  }
 
- .newServiceEnrolmentBtn {
-   //margin: 0 $spacing-03;
-   margin-bottom: 0.5em;
-   text-align: right;
- }
+//  .newServiceEnrolmentBtn {
+//    //margin: 0 $spacing-03;
+//    margin-bottom: 0.5em;
+//    text-align: right;
+//  }
 
- .newServiceEnrolmentBtn > button {
-   background-color: $ui-background;
- }
+//  .newServiceEnrolmentBtn > button {
+//    background-color: $ui-background;
+//  }
